crates/lib/tests/search/snapshots/r#mod__search__search_queries@1.sql.snap
---
source: crates/lib/tests/search/mod.rs
description: "from beginning  where my-wasm-filter(\"cool\", \"cat\")    or (timestamp between \"2024-05-28T17:55:08.145+02:00\" and now and value contains \"foundation\") order by key desc limit 1_000"
expression: "SearchQuery::parse(input)"
input_file: crates/lib/tests/search/inputs/1.sql
---
Ok(
    (
        "",
        SearchQuery {
            expression: OrExpression(
                [
                    AndTerm(
                        Atom(
                            Filter(
                                Filter {
                                    name: "my-wasm-filter",
                                    parameters: [
                                        String(
                                            "cool",
                                        ),
                                        String(
                                            "cat",
                                        ),
                                    ],
                                },
                            ),
                        ),
                    ),
                    AndTerm(
                        Atom(
                            Parenthesis(
                                OrTerm(
                                    AndExpression(
                                        [
                                            Atom(
                                                Compare(
                                                    TimestampBetween(
                                                        2024-05-28T17:55:08.145+02:00,
                                                        [datetime],
                                                    ),
                                                ),
                                            ),
                                            Atom(
                                                Compare(
                                                    Value(
                                                        None,
                                                        Contain,
                                                        "foundation",
                                                    ),
                                                ),
                                            ),
                                        ],
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
            limit: Some(
                1000,
            ),
            from: Some(
                Beginning,
            ),
            order_by: OrderBy {
                order: Key,
                keyword: Desc,
            },
        },
    ),
)
